# picoROM_pio

./: CMakeLists.txt  README.md  eeprom.pio  eeprom_test.pio  main.c
doc/: README.md  picoROM_c.sal  picoROM_pio.sal
doc/perf_test/: CMakeLists.txt  eeprom.pio  eeprom_test.pio  main.c
